--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/lemoncoders/origin-front-employee#readme",
   "dependencies": {
-    "@emotion/css": "^11.9.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/css": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@lemoncode/fonk": "^1.5.4",
     "@lemoncode/fonk-formik": "^4.0.1",
     "@lemoncode/fonk-match-field-validator": "^1.0.1",
     "@lemoncode/fonk-required-by-field-validator": "^1.0.1",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.5",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
-    "graphql-request": "^4.3.0",
+    "graphql-request": "^4.4.0-next.4",
     "immer": "^9.0.15",
     "lodash.flowright": "^3.5.0",
     "lodash.get": "^4.4.2",
@@ -42,38 +42,38 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-promise-tracker": "^2.1.0",
-    "react-router-dom": "^6.3.0",
-    "react-spinners": "^0.12.0",
+    "react-router-dom": "^6.4.0",
+    "react-spinners": "^0.13.4",
     "react-table": "^7.8.0",
     "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.5",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
-    "@babel/preset-typescript": "^7.17.12",
-    "@emotion/babel-plugin": "^11.9.2",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@emotion/babel-plugin": "^11.10.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@testing-library/dom": "^8.14.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.3",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@testing-library/dom": "^8.18.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^28.1.8",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
-    "dotenv-webpack": "^7.1.0",
+    "dotenv-webpack": "^7.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "npm-run-all": "^4.1.5",
     "react-refresh": "^0.14.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2",
+    "webpack-dev-server": "^4.11.0",
     "webpack-merge": "^5.8.0"
   }
 }
